_includes/manuals/1.5/4.1.1_authentication.md

Foreman natively supports LDAP authentication using one or multiple LDAP directories.

#### Setting up

Go to *Administer > LDAP Authentication*

Click on New Authentication Source and enter the following

* *Name*: an arbitrary name for the directory
* *Host*: the LDAP host name
* *Port*: the LDAP port (default is 389)
* *LDAPS*: check this if you want or need to use LDAPS to access the directory
* *Account*: leave this field empty if your LDAP can be read anonymously, otherwise enter a user name that has read access to the LDAP or use $login (which will be replaced with the actual user credentials upon login)
* *Account Password*: password for the account (if defined above and its not using the $login)
* *baseDN*: the top level DN of your LDAP directory tree
* *LDAP filter* (optional): a filter to restrict your LDAP queries, for instance: ```(memberOf=cn=foreman-users,ou=groups,dc=example,dc=net)```. Multiple filters can be combined using the syntax ```(& (filter1) (filter2))```.

#### On the fly user creation

By checking *On-the-fly user creation*, any LDAP user will have his Foreman account automatically created the first time he logs into Foreman.
For that, you have to specify the LDAP attributes name (firstname, lastname, email) that will be used to create their Foreman accounts.

#### Attribute Mapping

Foreman needs to know how to map Foreman attributes to their LDAP counterparts, such as login, name, and e-mail. Examples for Active Directory and OpenLDAP are provided below. Foreman also has the ability to use a user's photo stored in LDAP as their Foreman avatar, by setting the jpegPhoto attribute mapping.  

Additional Information:

* [Adding Display Pictures/Avatars to Red Hat IDM/FreeIPA](https://www.dalemacartney.com/2013/12/05/adding-display-picturesavatars-red-hat-idmfreeipa/)
* [Using the jpegPhoto attribute in Active Directory](https://docs.microsoft.com/en-us/archive/blogs/btrst4/using-the-jpegphoto-attribute-in-ad-part-i)
 
#### Examples

##### Active Directory

<pre>
Name              = My Directory
Host              = host.domain.org
Port              = 636
TLS               = yes
Onthefly register = yes
Account           = MyDomain\$login
Password          = (leave blank)
Base DN           = CN=users,DC=host,DC=domain,DC=org
attr login        = sAMAccountName
attr firstname    = givenName
attr lastname     = sN
mail              = mail
</pre>

##### FreeIPA

<pre>
Name              = My Directory
Host              = host.domain.org
Port              = 636
TLS               = yes
Onthefly register = yes
Account           = uid=$login,cn=users,cn=accounts,dc=example,dc=org
Password          = (leave blank)
Base DN           = cn=users,cn=accounts,dc=example,dc=org
attr login        = uid
attr firstname    = givenName
attr lastname     = sn
mail              = mail
</pre>

##### OpenLDAP

<pre>
Name              = My Directory
Host              = host.domain.org
Port              = 389
TLS               = no
Onthefly register = yes
Account           = (leave blank if anonymous access is enabled)
Password          = (leave blank)
Base DN           = ou=Users,dc=domain,dc=co,dc=il
attr login        = uid
attr firstname    = givenName
attr lastname     = sn
mail              = mail
</pre>

Note that LDAP attribute names are *case sensitive*.


#### Troubleshooting

If you want to use on-the-fly user creation, make sure that Foreman can fetch from your LDAP all the required information to create a valid user.
For example, on-the-fly user creation won't work if you don't have valid email addresses in your directory (you will get an 'Invalid username/password' error message when trying to log in).
